--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -40,4 +40,9 @@ sky:
     admin-ttl: 72000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+  alioss:
+    endpoint: ${sky.alioss.endpoint}
+    access-key: ${sky.alioss.access-key}
+    access-secret: ${sky.alioss.access-secret}
+    bucket-name: ${sky.alioss.bucket-name}
 
