--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -40,9 +40,15 @@ sky:
     admin-ttl: 72000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+    user-secret-key: itheima
+    user-ttl: 72000000
+    user-token-name: authentication
   alioss:
     endpoint: ${sky.alioss.endpoint}
     access-key: ${sky.alioss.access-key}
     access-secret: ${sky.alioss.access-secret}
     bucket-name: ${sky.alioss.bucket-name}
-
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
